--- a/SimplyTypedPresentation.cabal
+++ b/SimplyTypedPresentation.cabal
@@ -17,11 +17,17 @@ maintainer:          ssbothwell@gmail.com
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-executable SimplyTypedPresentation
+executable Untyped
+  main-is:             Untyped.hs
+  build-depends:       base >=4.12 && <4.13, mtl
+  default-language:    Haskell2010
+
+--executable SimplyTyped
+--  main-is:             SimplyTyped.hs
+--  build-depends:       base >=4.12 && <4.13, mtl
+--  default-language:    Haskell2010
+
+executable SystemT
   main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
-                     , mtl
-  -- hs-source-dirs:
+  build-depends:       base >=4.12 && <4.13, mtl
   default-language:    Haskell2010
