--- a/SimplyTypedPresentation.cabal
+++ b/SimplyTypedPresentation.cabal
@@ -19,7 +19,7 @@ extra-source-files:  CHANGELOG.md
 
 executable Untyped
   main-is:             Untyped.hs
-  build-depends:       base >=4.12 && <4.13, mtl
+  build-depends:       base >=4.12 && <4.13, mtl, containers
   default-language:    Haskell2010
 
 --executable SimplyTyped
