--- a/SimplyTypedPresentation.cabal
+++ b/SimplyTypedPresentation.cabal
@@ -19,15 +19,18 @@ extra-source-files:  CHANGELOG.md
 
 executable Untyped
   main-is:             Untyped.hs
+  hs-source-dirs:      main
   build-depends:       base >=4.12 && <4.13, mtl, containers
   default-language:    Haskell2010
 
 executable SimplyTyped
   main-is:             SimplyTyped.hs
+  hs-source-dirs:      main
   build-depends:       base >=4.12 && <4.13, mtl, containers
   default-language:    Haskell2010
 
 executable SystemT
   main-is:             SystemT.hs
+  hs-source-dirs:      main
   build-depends:       base >=4.12 && <4.13, mtl, containers
   default-language:    Haskell2010
