Lambda Pi Implementation

--- a/SimplyTypedPresentation.cabal
+++ b/SimplyTypedPresentation.cabal
@@ -52,3 +52,9 @@ executable SystemFOmega
   hs-source-dirs:      main
   build-depends:       base >=4.12 && <4.13, mtl, containers, lens
   default-language:    Haskell2010
+
+executable LambdaPi
+  main-is:             LambdaPi.hs
+  hs-source-dirs:      main
+  build-depends:       base >=4.12 && <4.13, mtl, containers, lens
+  default-language:    Haskell2010
