Pattern typechecking should be working

--- a/Lambda-Cube.cabal
+++ b/Lambda-Cube.cabal
@@ -34,7 +34,7 @@ executable SimplyTypedModules
 executable SimplyTypedPatterns
   main-is:             SimplyTypedPatterns.hs
   hs-source-dirs:      main
-  build-depends:       base >=4.12 && <4.13, mtl, containers
+  build-depends:       base >=4.12 && <4.13, mtl, containers, lens
   default-language:    Haskell2010
 
 executable SystemT
