--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,3 +1,4 @@
+
 name: nix:build
 on:
   pull_request:
@@ -7,16 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout 🛎️
-      uses: actions/checkout@v2.4.0
+    - uses: actions/checkout@v3
 
     - name: Install Nix ❄
-      uses: cachix/install-nix-action@v15
+      uses: cachix/install-nix-action@v20
       with:
         extra_nix_config: |
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
     - name: Link Cachix 🔌
-      uses: cachix/cachix-action@v10
+      uses: cachix/cachix-action@v12
       with:
         name: cofree-coffee
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
