--- a/Lambda-Cube.cabal
+++ b/Lambda-Cube.cabal
@@ -66,3 +66,9 @@ executable LambdaPi
   hs-source-dirs:      main
   build-depends:       base >= 2 && <5, mtl, containers, lens
   default-language:    Haskell2010
+
+executable UntypedNBE
+  main-is:             UntypedNBE.hs
+  hs-source-dirs:      main
+  build-depends:       base >= 2 && <5, mtl, containers
+  default-language:    Haskell2010
