--- a/Lambda-Cube.cabal
+++ b/Lambda-Cube.cabal
@@ -78,3 +78,9 @@ executable SimplyTypedNBE
   hs-source-dirs:      main
   build-depends:       base >= 2 && <5, mtl, containers
   default-language:    Haskell2010
+
+executable SimplyTypedElab
+  main-is:             SimplyTypedElab.hs
+  hs-source-dirs:      main
+  build-depends:       base >= 2 && <5, mtl, containers
+  default-language:    Haskell2010
