--- a/lambda-calculus-hs.cabal
+++ b/lambda-calculus-hs.cabal
@@ -131,3 +131,9 @@ executable 01-BidirectionalTypechecking
   main-is:             new/01-BidirectionalTypechecking.hs
   hs-source-dirs:      main
   build-depends:       base >= 2 && <5, mtl, containers
+
+executable 02-NormalizationByEvaluation
+  import:              common-settings
+  main-is:             new/02-NormalizationByEvaluation.hs
+  hs-source-dirs:      main
+  build-depends:       base >= 2 && <5, mtl, containers
