--- a/lambda-calculus-hs.cabal
+++ b/lambda-calculus-hs.cabal
@@ -131,3 +131,9 @@ executable 05-SystemT
   main-is:             05-SystemT.hs
   hs-source-dirs:      main
   build-depends:       base >= 2 && <5, mtl, transformers, containers
+
+executable 06-Records
+  import:              common-settings
+  main-is:             06-Records.hs
+  hs-source-dirs:      main
+  build-depends:       base >= 2 && <5, mtl, transformers, containers
